Fix #136: Align the [b] bbcode button.
The bold font on this button alters the line-height
and makes the button dip below the others. This should
be fixed by setting a common line-height.

--- a/css/global/layout.css
+++ b/css/global/layout.css
@@ -107,6 +107,10 @@ h3 {
   right: 20px;
 }
 #footerContainer div { display: inline-block }
+
+#bbCodeContainer button { line-height: 1.4em }
+#bbCodeContainer button[value=b] { vertical-align: bottom }
+
 #footerContainer #colorCodesContainer {
   bottom: 48px;
   left: 20px;
